Set needs paint property update when dirtying descendant-dependent properties.

BUG=677239
TEST=See failing tests in 677239 without this change.
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2601963002
Cr-Commit-Position: refs/heads/master@{#440889}